# wgrpc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
proto/: wg.proto
src/: main.cc  wireguard.h
